Update project configuration and enhance media handling
- Expanded `.gitignore` to include various local and environment files.
- Integrated dotenv for environment variable management in `drizzle.config.ts`.
- Updated `package.json` dependencies, including `@jridgewell/trace-mapping`, `express`, and added new packages for Neon database support.
- Modified `index.html` to use a new font stack.
- Enhanced media type definitions to include "game" and updated related components for better media handling.
- Improved UI components across various pages for consistency and better user experience, including button styles and layout adjustments.
- Added authentication context to manage user sessions more effectively in the application.

This commit lays the groundwork for improved media management and user authentication features.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,22 @@ dist
 server/public
 vite.config.ts.*
 *.tar.gz
+
+.cursor
+.claude
+.replit
+.vscode
+.agents
+.local
+/.cursor
+/.claude
+/.replit
+/.vscode
+/.agents
+/.local
+
+.env
+.env.local
+/docs
+docs
+replit.md
