--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react": "^19.2.4",
     "react-day-picker": "^9.13.2",
     "react-dom": "^19.2.4",
+    "react-easy-crop": "^5.5.6",
     "react-hook-form": "^7.71.1",
     "react-resizable-panels": "^2.1.9",
     "recharts": "^2.15.4",
